# DA

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
examples/: sample.csv  sample_conversion.py
src/da/models/: basic.py  da_postgres.sql  occurrence.py  taxon.py
src/da/utils/: cachr.py  commons.py  config.py  log.py
src/datutl/models/: basic.py  occurrence.py  taxon.py
src/datutl/utils/: cachr.py  commons.py  config_to_geojson.py  geojson_to_config.py  utm_to_latlon.py
src/examples/: sample_conversion.py
